[workspace]
resolver = "2"
members = [ "crates/pulse_cli", "crates/pulsevm", "crates/pulsevm_benchmark", "crates/pulsevm_ffi", "crates/pulsevm_core", "crates/pulsevm_crypto",
    "crates/pulsevm_grpc"
, "crates/pulsevm_name", "crates/pulsevm_proc_macros", "crates/pulsevm_serialization", "crates/pulsevm_storage", "crates/pulsevm_testdb", "crates/pulsevm_time", "crates/pulsevm_unittests"]

[profile.profiling]
inherits = "release"
debug = true
