[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spdlog-rs = "0.4"
tokio = { version = "1", features = ["full"] }

pulsevm_api_client = { path = "../pulsevm_api_client" }
pulsevm_api_types = { path = "../pulsevm_api_types" }
pulsevm_core = { path = "../pulsevm_core" }
pulsevm_crypto = { path = "../pulsevm_crypto" }
pulsevm_keosd_client = { path = "../pulsevm_keosd_client" }
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_time = { path = "../pulsevm_time" }