[package]
name = "pulsevm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bs58 = { version = "0.5.1", features = ["cb58"] }
hex = "0.4"
chrono = "0.4.40"
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
log = "0.4"
lru = "0.14.0"
spdlog-rs = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.11"
secp256k1 = { version = "0.30.0", features = ["recovery", "global-context", "hashes", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
prost-types = "0.12.3"
wasmtime = { version = "34.0.1" }

pulsevm_grpc = { path = "../pulsevm_grpc" }
pulsevm_chainbase = { path = "../pulsevm_chainbase" }
pulsevm_name = { path = "../pulsevm_name" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
pulsevm_serialization = { path = "../pulsevm_serialization" }