[package]
name = "pulsevm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hex = "0.4"
futures-util = "0.3"
http-body-util = "0.1.3"
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
log = "0.4"
spdlog-rs = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21" }
tokio-util = { version = "0.7.16" }
tonic = "0.11"
secp256k1 = { version = "0.30.0", features = ["recovery", "global-context", "hashes", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
prost-types = "0.12.3"

pulsevm_core = { path = "../pulsevm_core" }
pulsevm_crypto = { path = "../pulsevm_crypto" }
pulsevm_grpc = { path = "../pulsevm_grpc" }
pulsevm_chainbase = { path = "../pulsevm_chainbase" }
pulsevm_name = { path = "../pulsevm_name" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_time = { path = "../pulsevm_time" }