[package]
name = "pulsevm_api_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

pulsevm_api_types = { path = "../pulsevm_api_types" }
pulsevm_core = { path = "../pulsevm_core" }