[package]
name = "pulsevm_chainbase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
heed = "0.22.0"
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }