[package]
name = "pulsevm_chainbase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fjall = { version = "2.11.2", features = ["lz4", "ssi_tx"], default-features = false }
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
heed = "0.22.0"
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
redb = { version = "3.1.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.23.0"

[[bench]]
name = "fjall"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "insert"
harness = false
