[package]
name = "pulsevm_chainbase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
kanal = "0.1"
fjall = { version = "2.11.2", features = ["lz4", "ssi_tx"], default-features = false }
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
rust-rocksdb = { version = "0.44.2", default-features = false, features = ["bindgen-runtime", "multi-threaded-cf"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.23.0"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "insert"
harness = false
