[package]
name = "pulsevm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.40"
cxx = "1.0"
flate2 = "1.1.2"
hex = "0.4"
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
lru = "0.14.0"
prost-types = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["asm"] }
spdlog-rs = "0.4"
tempfile = "3.23.0"
thiserror = "2"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
wasmer = { version = "7.0.1", features = ["llvm"] }
wasmer-compiler-llvm = "7.0.1"
wasmer-middlewares = "7.0.1"

pulsevm_billable_size = { path = "../pulsevm_billable_size" }
pulsevm_constants = { path = "../pulsevm_constants" }
pulsevm_crypto = { path = "../pulsevm_crypto" }
pulsevm_error = { path = "../pulsevm_error" }
pulsevm_grpc = { path = "../pulsevm_grpc" }
pulsevm_name = { path = "../pulsevm_name" }
pulsevm_name_macro = { path = "../pulsevm_name_macro" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
pulsevm_serialization = { path = "../pulsevm_serialization" }
pulsevm_time = { path = "../pulsevm_time" }
pulsevm_ffi = { path = "../pulsevm_ffi" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "transfer"
harness = false