[package]
name = "pulsevm_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", features = ["asm"] }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
pulsevm_serialization = { path = "../pulsevm_serialization" }