[package]
name = "pulsevm_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
cxx = "1.0"
tempfile = "3.23.0"
pulsevm_error = { path = "../pulsevm_error" }
pulsevm_serialization = { path = "../pulsevm_serialization" }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.50"
cxx-build = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "insert"
harness = false