[package]
name = "pulsevm_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
cxx = "1.0.194"
tempfile = "3.23.0"
serde = { version = "1.0", features = ["derive"] }
pulsevm_billable_size = { path = "../pulsevm_billable_size" }
pulsevm_constants = { path = "../pulsevm_constants" }
pulsevm_error = { path = "../pulsevm_error" }
pulsevm_name = { path = "../pulsevm_name" }
pulsevm_proc_macros = { path = "../pulsevm_proc_macros" }
pulsevm_serialization = { path = "../pulsevm_serialization" }
zerocopy = "0.8.34"
zerocopy-derive = "0.8.34"

[build-dependencies]
cc = "1.2.50"
cxx-build = { version = "1.0" }
cmake = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "insert"
harness = false