[package]
name = "pulsevm_keosd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pulse-keosd"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
aes = "0.8"
bs58 = "0.5"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rand = "0.9"
ripemd = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spdlog-rs = "0.4"
thiserror = "2"

[dev-dependencies]
actix-rt = "2"
actix-http = "3"
tempfile = "3"