[package]
name = "pulsevm_serialization"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulsevm_error = { path = "../pulsevm_error" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "deserialization"
harness = false