[package]
name = "pulsevm_testdb"
version = "0.1.0"
edition = "2024"

[dependencies]
fjall = { version = "2.11.2", features = ["lz4", "ssi_tx", "bytes"], default-features = false }
pulsevm_serialization = { path = "../pulsevm_serialization" }
lmdb = "0.8.0"
heed = "0.22.0"
tempfile = "3.23.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fjall"
harness = false

[[bench]]
name = "lmdb"
harness = false

[[bench]]
name = "heed"
harness = false